Fleet updated
