# server/swagger.json
@@ -25,9 +25,19 @@
         "description": "Find out more",
         "url": "http://swagger.io"
       }
+    }, 
+    {
+      "name": "Fleets", 
+      "description": "Everything about Fleets", 
+      "externalDocs": {
+        "description": "Find out more",
+        "url": "http://swagger.io"
+      }
     }
   ],
   "paths": {
+
+
     "/stations": {
       "get": {
         "tags": ["Stations"],
@@ -110,6 +120,8 @@
 
       }
     }, 
+
+
     "/stations/{stationId}": {
       "get": {
         "tags": ["Stations"], 
@@ -255,6 +267,238 @@
           }
         }
       }
+    }, 
+    
+    
+    "/fleets": {
+      "get": {
+        "tags": ["Fleets"],
+        "summary": "Get all fleets list", 
+        "description": "Get all fleets from the database", 
+        "operationId": "getFleets",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }, 
+      "post": {
+        "tags": ["Fleets"], 
+        "summary": "Add a new fleet to the DB", 
+        "description": "Add a new fleet to the DB", 
+        "operationId": "addFleet", 
+        "requestBody": {
+          "description": "Create a new fleet in the DB",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Fleets"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/Fleets"
+              }
+            },
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/Fleets"
+              }
+            }
+          }, 
+          "required": true
+        }, 
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "422": {
+            "description": "Validation exception"
+          }
+        }
+
+      }
+    }, 
+
+
+    "/fleets/{fleetId}": {
+      "get": {
+        "tags": ["Fleets"], 
+        "summary": "Get a fleetId by ID", 
+        "description": "Get a fleet by ID", 
+        "operationId": "getFleetById", 
+        "parameters": [
+          {
+            "name": "fleetId",
+            "in": "path",
+            "description": "ID of fleet to return",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          }
+        ], 
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Station not found"
+          }
+        }
+      }, 
+      "put": {
+        "tags": ["Fleets"],
+        "summary": "Update a fleet information by ID", 
+        "description": "Update a fleet information by ID", 
+        "operationId": "updateFleetById", 
+        "parameters": [
+          {
+            "name": "fleetId",
+            "in": "path",
+            "description": "ID of fleet to return",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          }
+        ], 
+        "requestBody": {
+          "description": "Update fleet information in the DB",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Fleets"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/Fleets"
+              }
+            },
+            "application/x-www-form-urlencoded": {
+              "schema": {
+                "$ref": "#/components/schemas/Fleets"
+              }
+            }
+          }, 
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Fleet not found"
+          }
+        }
+      }, 
+      "delete": {
+        "tags": ["Fleets"],
+        "summary": "Delete a fleet information by ID", 
+        "description": "Delete a fleet information by ID", 
+        "operationId": "deleteFleetById", 
+        "parameters": [
+          {
+            "name": "fleetId",
+            "in": "path",
+            "description": "ID of fleet to return",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          }
+        ], 
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fleets"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Fleet not found"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -284,6 +528,24 @@
             "type": "number", 
             "format": "double", 
             "example": -111.81659271582987
+          }
+        }
+      }, 
+      "Fleets": {
+        "type": "object", 
+        "properties": {
+          "fleetId": {
+            "type": "string", 
+            "example": "E101"
+          }, 
+          "fleetType": {
+            "type": "string", 
+            "example": "Engine"
+          }, 
+          "stationId": {
+            "type": "integer", 
+            "format": "int64", 
+            "example": 101
           }
         }
       }
